Fix CSS import order, social btns, body whitespace.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-
-
-
 h4 {
   min-height: 53px;
 }
@@ -13,15 +10,15 @@ h4 {
   margin-bottom: 10px;
 }
 
+
 .btn-circle {
-  background-color: white;
-  border-radius: 15px;
   width: 30px;
   height: 30px;
   margin: 3px;
   font-size: 12px;
-  /*text-align: center;*/
-  /*padding: 6px 0;*/
-  /*line-height: 1.428571429;*/
+
+  border-radius: 15px;
+  padding: 0px;
+
 
 }
